# SuperMarioClone

./: .gitignore  Animation.cpp  Animation.h  AnimationBuilder.cpp  AnimationBuilder.h  CMakeLists.txt  ControllerOverlay.cpp  ControllerOverlay.h  Entity.cpp  Entity.h  Event.cpp  Event.h  Fallable.cpp  Fallable.h  Goomba.cpp  Goomba.h  Hitbox.cpp  Hitbox.h  Input.cpp  Input.h  Level.cpp  Level.h  Mario.cpp  Mario.h  Math.cpp  Math.h  Pipe.cpp  Pipe.h  README.md  SpriteMaker.cpp  SpriteMaker.h  Text.cpp  Text.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  file_util.cpp  file_util.h  main.cpp  (+2 more)
entities/: Block.cpp  Block.h  Fireball.cpp  Fireball.h  Goomba.cpp  Goomba.h  Ground.cpp  Ground.h  InvisibleWall.cpp  InvisibleWall.h  Items.cpp  Items.h  Mario.cpp  Mario.h  Pipe.cpp  Pipe.h
unittests/: CMakeLists.txt  test_animation.cpp  test_collision.cpp  test_entity.cpp  test_entity_collision.cpp  test_fs.cpp  test_hitbox.cpp  test_timer.cpp  test_vector.cpp
